<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context="com.jss.smartdustbin.activity.RegisterDustbinActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/registration_confirm"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/registration_successful_text"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/registration_success_text"
            android:textColor="@android:color/black"
            android:textSize="16dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/back_to_home_bt_text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="17sp"
        android:shadowColor="#3C000000"
        android:elevation="2dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@android:color/black"
        android:textColor="@android:color/white"
        android:backgroundTint="#222a2c"
        android:alpha="0.9"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</RelativeLayout>
