<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="74dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context=".activity.RegistrationExtraDataActivity">

    <RelativeLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/image_progress"
            android:visibility="visible"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_below="@id/image_progress"
            android:text="Loading..."/>

    </RelativeLayout>

    <include
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        layout="@layout/empty_ward_list"
        android:visibility="gone"/>

    <com.jss.smartdustbin.model.NoDefaultSpinner
        android:id="@+id/spinner_wards"
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/ward_prompt"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@android:color/black"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/bin_heading_text"
        app:hintTextColor="@android:color/black"
        app:boxStrokeColor="@android:color/black"
        android:textColorHint="#a4a4a4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_bin"
            android:singleLine="true"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/landmark_heading_text"
        app:hintTextColor="@android:color/black"
        app:boxStrokeColor="@android:color/black"
        android:textColorHint="#a4a4a4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_landmark"
            android:singleLine="true"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/continue_bt_text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="72dp"
        android:layout_gravity="center_horizontal"
        android:textSize="17sp"
        android:shadowColor="#3C000000"
        android:elevation="2dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@android:color/black"
        android:textColor="@android:color/white"
        android:backgroundTint="#222a2c"
        android:alpha="0.9"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />



</LinearLayout>