<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background">

   <!-- <com.github.captain_miao.optroundcardview.OptRoundCardView
        style="@style/OptRoundCardView"
        android:foreground="#1BBE56DB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:optRoundCardCornerRadius="0dp"
        app:optRoundCardLeftTopCorner="true"
        app:optRoundCardRightTopCorner="true"
        app:optRoundCardTopEdges="false"
        android:layout_gravity="center_vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:elevation="5dp">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="234dp"
                android:layout_height="137dp"
                android:padding="10dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/login_text" />

            <!--<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="#222a2c"
                android:layout_marginTop="24dp"
                android:textStyle="bold"
                android:fontFamily="@font/brandon_text_regular"
                android:text="SMART DUSTBIN MANAGER"
                android:textSize="19sp" />-->

           <!-- <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:hint="Username"
                android:textColorHint=""/>
-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:hint="@string/username_heading"
                app:hintTextColor="#222a2c"
                app:boxStrokeColor="#222a2c"
                android:textColorHint="#a4a4a4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_username"
                    android:singleLine="true"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password_heading"
                app:passwordToggleEnabled="true"
                app:hintTextColor="#222a2c"
                app:boxStrokeColor="#222a2c"
                app:passwordToggleTint="#CE222A2C"
                android:textColorHint="#a4a4a4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

           <!-- <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="48dp"
                android:text="Login"
                android:backgroundTint="#902FFF"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:textSize="17sp"
                android:textColor="@android:color/white"
                />-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="48dp"
                android:text="@string/login_text"
                android:backgroundTint="#222a2c"
                android:elevation="2dp"
                android:shadowRadius="2"
                android:shadowDy="2"
                android:shadowColor="#3C000000"
                android:alpha="0.9"
                android:textAllCaps="false"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textSize="17sp"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
   <!-- </com.github.captain_miao.optroundcardview.OptRoundCardView>-->


</FrameLayout>

