<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <fragment
                android:layout_weight="1"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:context=".activity.DustbinDetailsActivity"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="8dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:id="@+id/constraint_layout">



                   <ProgressBar
                       android:id="@+id/dustbin_progressbar"
                       style="@android:style/Widget.ProgressBar.Horizontal"
                       android:layout_width="71dp"
                       android:layout_height="72dp"
                       android:progressDrawable="@drawable/progressbar_states"
                       app:layout_constraintTop_toTopOf="@+id/dustbin_image"
                       app:layout_constraintStart_toStartOf="@id/dustbin_image"
                       android:layout_marginTop="26dp"
                       android:elevation="1dp"
                       android:layout_marginLeft="15dp"
                       android:layout_marginStart="15dp" />

                   <ImageView
                       android:id="@+id/dustbin_image"
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       app:layout_constraintTop_toTopOf="@+id/constraint_layout"
                       app:layout_constraintStart_toStartOf="@id/constraint_layout"
                       android:layout_margin="30dp"
                       android:src="@drawable/dustbin_level" />

                   <TextView
                       android:id="@+id/garbage_level_tv"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="77% full"
                       android:textStyle="bold"
                       android:textColor="#E2574C"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@+id/dustbin_image"
                       android:layout_marginTop="24dp"
                       android:layout_marginLeft="34dp"
                       android:textSize="17sp"
                       android:paddingTop="8dp"
                       android:paddingBottom="8dp"
                       android:paddingLeft="20dp"
                       android:paddingRight="20dp"
                       android:background="@drawable/border_text"
                       android:layout_marginStart="30dp" />

                    <TextView
                        android:id="@+id/bin_heading_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="BIN:"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/dustbin_image"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="12dp"/>
                    <TextView
                        android:id="@+id/bin_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="7418529639"
                        android:textSize="15sp"
                        android:textColor="@android:color/black"
                        app:layout_constraintStart_toEndOf="@id/dustbin_image"
                        app:layout_constraintTop_toBottomOf="@id/bin_heading_tv"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="20dp" />

                   <TextView
                       android:id="@+id/landmark_heading_tv"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       app:layout_constraintTop_toBottomOf="@id/bin_tv"
                       android:text="@string/located_near_text"
                       android:textColor="@android:color/black"
                       android:textStyle="bold"
                       app:layout_constraintStart_toEndOf="@id/dustbin_image"
                       android:layout_marginLeft="20dp"
                       android:layout_marginStart="20dp"
                       android:layout_marginTop="8dp"/>
                   <TextView
                       android:id="@+id/landmark_tv"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="City Hospital"
                       android:textSize="15sp"
                       android:textColor="@android:color/black"
                       app:layout_constraintStart_toEndOf="@id/dustbin_image"
                       app:layout_constraintTop_toBottomOf="@id/landmark_heading_tv"
                       android:layout_marginLeft="20dp"
                       android:layout_marginTop="2dp"
                       android:layout_marginStart="20dp" />
                   <TextView
                       android:id="@+id/last_updated_heading_tv"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       app:layout_constraintTop_toBottomOf="@id/landmark_tv"
                       android:text="@string/last_updated_text"
                       android:textColor="@android:color/black"
                       android:textStyle="bold"
                       app:layout_constraintStart_toEndOf="@id/dustbin_image"
                       android:layout_marginLeft="20dp"
                       android:layout_marginStart="20dp"
                       android:layout_marginTop="8dp"/>

                   <TextView
                       android:id="@+id/last_updated_tv"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Nov 12, 2019 10:20 AM"
                       android:textSize="15sp"
                       android:textColor="@android:color/black"
                       app:layout_constraintStart_toEndOf="@id/dustbin_image"
                       app:layout_constraintTop_toBottomOf="@id/last_updated_heading_tv"
                       android:layout_marginRight="8dp"
                       android:layout_marginLeft="20sp"
                       android:layout_marginTop="2dp"
                       android:layout_marginStart="20dp"
                       android:layout_marginEnd="8dp" />
                   <TextView
                       android:id="@+id/installed_by_heading_tv"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       app:layout_constraintTop_toBottomOf="@id/last_updated_tv"
                       android:text="@string/installed_by_text"
                       android:textColor="@android:color/black"
                       android:textStyle="bold"
                       app:layout_constraintStart_toEndOf="@id/dustbin_image"
                       android:layout_marginLeft="20dp"
                       android:layout_marginStart="20dp"
                       android:layout_marginTop="8dp"/>

                   <TextView
                       android:id="@+id/installed_by_tv"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textColor="@android:color/black"
                       android:text="Sudhir Singh"
                       android:textSize="15sp"
                       app:layout_constraintStart_toEndOf="@id/dustbin_image"
                       app:layout_constraintTop_toBottomOf="@id/installed_by_heading_tv"
                       android:layout_marginLeft="20dp"
                       android:layout_marginStart="20dp"
                       android:layout_marginTop="2dp"/>

                   <ImageView
                       android:id="@+id/info_icon"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/ic_info"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintRight_toRightOf="parent"
                       android:layout_marginTop="12dp"
                       android:layout_marginRight="12dp"
                       android:layout_marginEnd="12dp" />

                   <ImageView
                       android:id="@+id/note_icon"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       app:layout_constraintBottom_toBottomOf="parent"
                       android:src="@drawable/ic_note"
                       app:layout_constraintLeft_toLeftOf="parent"
                       android:layout_marginLeft="12dp"
                       android:layout_marginBottom="24dp"/>

                   <TextView
                       android:id="@+id/note_text"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textColor="#88222A2C"
                       android:maxLines="2"
                       android:text="@string/dustbin_details_note_text"
                       app:layout_constraintStart_toEndOf="@id/note_icon"
                       app:layout_constraintTop_toTopOf="@id/note_icon"
                       android:layout_marginLeft="12dp"
                       android:layout_marginBottom="16dp"
                       android:layout_marginStart="12dp" />



               </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>



        </LinearLayout>

</RelativeLayout>